--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@reduxjs/toolkit": "^1.8.6",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
